[gd_scene load_steps=6 format=3 uid="uid://b5kfuahvbhjn1"]

[ext_resource type="Script" uid="uid://dao4k3okgq547" path="res://ui/capacity_row.gd" id="1_ca7ih"]
[ext_resource type="PackedScene" uid="uid://ckgl032ulp68t" path="res://ui/capacity_label.tscn" id="2_jisyx"]
[ext_resource type="Texture2D" uid="uid://t16adebrr2qk" path="res://assets/final/binder-button.png" id="3_cn0d3"]
[ext_resource type="Texture2D" uid="uid://d4jm3m5g7ioux" path="res://assets/final/binder-button-selected.png" id="4_ih42u"]
[ext_resource type="Texture2D" uid="uid://butegaonl7dfb" path="res://assets/final/binder-button-highlighted.png" id="5_e5aq4"]

[node name="CapacityRow" type="VBoxContainer"]
offset_right = 172.0
offset_bottom = 96.0
scale = Vector2(1.018868, 1.0588236)
script = ExtResource("1_ca7ih")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CapacityNameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Capacity:"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CapacityLabel" parent="HBoxContainer" instance=ExtResource("2_jisyx")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="AssignWorkersButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("3_cn0d3")
texture_pressed = ExtResource("4_ih42u")
texture_hover = ExtResource("5_e5aq4")
stretch_mode = 0

[node name="Label" type="Label" parent="AssignWorkersButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -11.5
offset_right = 59.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Assign Workers"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnassignWorkersButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("3_cn0d3")
texture_pressed = ExtResource("4_ih42u")
texture_hover = ExtResource("5_e5aq4")
stretch_mode = 0

[node name="Label" type="Label" parent="UnassignWorkersButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -23.833334
offset_right = 70.0
offset_bottom = 23.833334
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Unassign Workers"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="AssignWorkersButton" to="." method="_on_assign_workers_button_button_up"]
[connection signal="button_up" from="UnassignWorkersButton" to="." method="_on_unassign_workers_button_button_up"]
